Feature: API Demo testing

--- a/module_demo.ipynb
+++ b/module_demo.ipynb
@@ -257,44 +257,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Llama2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You are using the default legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. If you see this, DO NOT PANIC! This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thouroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cfd6427082a46ce9054240b9b42c89b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import llm_summarize as llm"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -324,33 +286,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OpenAI"
+    "## OpenAI - Summarize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
-    "import datetime\n",
-    "import json\n",
-    "import os\n",
-    "\n",
-    "OPENAI_API_KEY = str()\n",
-    "with open('secret_key.json', 'r') as f:\n",
-    "    OPENAI_API_KEY = json.load(f)['OpenAI']['API_KEY']\n",
-    "\n",
-    "openai.organization = \"org-Dk6aIT0xJaxT1UGkDS2p4efV\"\n",
-    "openai.api_key = OPENAI_API_KEY"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## OpenAI - Summarize"
+    "import openai"
    ]
   },
   {
